# clerk_fdw

./: .gitignore  Cargo.toml  META.json.in  Makefile  README.md  Trunk.toml
.github/workflows/: extension_ci.yml  extension_upgrade.yml
sql/: clerk_fdw--0.2.6--0.2.7.sql
src/: lib.rs
