[package]
name = "clerk_fdw"
version = "0.3.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17", "supabase-wrappers/pg17"]
pg_test = []

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.38"
clerk-rs = "0.4.0"
pgrx = "=0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supabase-wrappers = { version = "0.1.20", default-features = false }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
pgrx-tests = "=0.12.6"
